tests/js/fun2.exp
tests/js/fun2.js:11:0 TypeError: f is not a function
